* Current version
** [2021-03-29 Mon 20:13]: revised =BDD.rename_vars= (to respect partial updates) 
** [2021-03-19 Fri 13:48]: implemented a cUFL MIP 
   seems like a simple program, though -- let's see if we'll have an edge with BDDs...
** [2021-03-08 Mon 16:50]: drafted the BDD representation for 'colorful' UFL. 
** [2021-03-05 Fri 13:20]: refactored =dia_sizes.sh= into a separate experiment 
** [2021-03-05 Fri 12:34]: implemented x-only NF model. 
** [2021-02-22 Mon 17:42]: implemented =swap_up= for weighted DDs 
   (simple tests passsing)
** [2021-02-22 Mon 12:30]: drafted =swap_up= for a weighted BDD
** [2021-02-22 Mon 12:29]:  drafted =truth_table= for a weighted BDD
** [2021-02-19 Fri 16:21]: drafted the implementation of =intersect= 
** [2021-02-19 Fri 13:16]: implemented availability, covering BDDs + naive MIPs (tests passing)
** [2021-02-18 Thu 14:40]: implemented MIP generation (for arbitrary g, dict) 
** [2021-02-18 Thu 13:51]: removed $x_i$ variables
   (following the recommendation of JCS: indeed, these are unnecessary to encode
   the decision, if I have $z_{ij}$.
** [2021-02-16 Tue 14:03]: removed hard "cover all" constraint (covering DD generation)
** [2021-02-16 Tue 11:57]: dealt with linting (=flake8=) for =UFL.py=
** [2021-02-13 Sat 13:29]: creating (weighted) covering BDD with arbitrary overlap penalties
** [2021-02-13 Sat 13:04]: implemented (unweighted) covering BDD for arbitrary g(·) 
** [2021-02-12 Fri 21:58]: implemented weighted BDD generation for UFL (no overlap penalty)
** [2021-02-12 Fri 16:41]: added weights to BDD class
** [2021-02-12 Fri 16:04]: tested BDD 2 MIP with a pair of (unweighted) BDDs (passed)
 [[file:~/projects/align-BDD/testing/BDD2MIP_1.org::*From diagram $A$:][From diagram $A$:]]
** [2021-02-12 Fri 14:07]: incorporated binary 'linking' variables 
** [2021-02-12 Fri 12:57]: added a simple BDD to MIP function (no weights)