@@ -1,8 +1,9 @@
 * Immediate TODOs
   - [X] =build_cover_DD=: make single overlap version
   - [X] =build_color_DD=: fix the procedure (linear DD growth is doable!)
-  - [ ] =build_cUFL_MIP=: revise to single overlap version
-  - [ ] cross-check DDs with the MIP.
+  - [X] =build_cUFL_MIP=: revise to single overlap version
+  - [X] cross-check DDs with the MIP (simple)
+  - [ ] cross-check DDs with the MIP (random set)
   - [ ] test the align-BDD version.
   - [ ] test the new problem (against Gurobi)
 
